--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                         </button>
                     </div>
                 <div class="col-md-2">
-                    <button id="refreshButton" class="btn btn-secondary">Refresh</button>
+                    <button id="refreshButton" class="btn btn-danger">Refresh</button>
                 </div>
                 </div>
             </div>
