Date, Titel modified

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="navbar navbar-dark">
         <div class="container">
-            <h1 class="text-light">USPTO Data Downloader</h1>
+            <h1 class="text-light">US Patent Application Documents Retrieval System</h1>
         </div>
     </header>
 
