--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,16 @@
             <p class="mt-8">Search by Application number, Patent number, Publication number.</p>
         </section>
 
+
 <!-- Inside the results-section -->
 <section class="results-section" style="display: none;">
+
+<div id="totalPageCountPlaceholder">Total Pages: <span id="totalPageCount">0</span></div>
+<div id="totalEntryCountPlaceholder">Total Entries: <span id="totalEntryCount">0</span></div>
+
     <!-- Filter dropdown -->
     <div class="col-md-4">
+          
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown"
                 aria-expanded="false">
