--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,9 @@
 
 <!-- Inside the results-section -->
 <section class="results-section" style="display: none;">
-
-<div id="totalPageCountPlaceholder">Total Pages: <span id="totalPageCount">0</span></div>
 <div id="totalEntryCountPlaceholder">Total Entries: <span id="totalEntryCount">0</span></div>
+<div id="totalPageCountPlaceholder">Total Page Count: <span id="totalPageCount">0</span></div>
+
 
     <!-- Filter dropdown -->
     <div class="col-md-4">
