--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,8 @@
 <!-- Inside the results-section -->
 <section class="results-section" style="display: none;">
 <div id="totalEntryCountPlaceholder">Total Entries: <span id="totalEntryCount">0</span></div>
-<div id="totalPageCountPlaceholder">Total  Page Count: <span id="totalPageCount">0</span></div>
+<span id="totalPageCountPlaceholder">Total Page Count: <span id="totalPageCount">0</span></span>
+
 
 
     <!-- Filter dropdown -->
