--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -58,7 +58,7 @@
 <!-- Inside the results-section -->
 <section class="results-section" style="display: none;">
 <div id="totalEntryCountPlaceholder">Total Entries: <span id="totalEntryCount">0</span></div>
-<span id="totalPageCountPlaceholder">Total Page Count: <span id="totalPageCount">0</span></span>
+<div id="totalPageCountPlaceholder">Total Page Count: <span id="totalPageCount">0</span></div>
 
 
 
