--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
     <!-- Filter dropdown -->
     <div class="col-md-4">
-<!--           
+          
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -77,7 +77,7 @@
                 <li><a class="dropdown-item" data-value="all">All</a></li>
             </ul>
         </div>
-    </div> -->
+    </div>
 
 
 
