--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     <!-- Filter dropdown -->
     <div class="col-md-4">
           
-        <div class="dropdown">
+<!--         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Filter
@@ -76,7 +76,7 @@
                 <li><a class="dropdown-item" data-value="specifications">Specifications</a></li>
                 <li><a class="dropdown-item" data-value="all">All</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
 
 
